# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathnav"
version = "1.0.0"
description = "Navigate directorys with ease"
readme = "README.md"
authors = [{ name = "TitusHM", email = "" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["path", "naviagte", "path change"]
dependencies = []
requires-python = ">=3.5"

[project.urls]
Homepage = "https://github.com/titushm/pathnav"
